# apollo-vita

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
appdata/: NPJH50119.savepatch  NPJH50276.savepatch  NPJH50316.savepatch  NPJH50380.savepatch  NPJH50410.savepatch  NPJH50412.savepatch  NPJH50437.savepatch  NPJH50441.savepatch  NPJH50535.savepatch  NPJH50563.savepatch  NPJH50567.savepatch  NPUH10023.savepatch  NPUH10024.savepatch  NPUH10025.savepatch  NPUH10041.savepatch  NPUH10114.savepatch  NPUH10191.savepatch  NPUH10197.savepatch  PCSA00007.savepatch  PCSA00096.savepatch  PCSA00151.savepatch  PCSB00040.savepatch  PCSB00041.savepatch  PCSB00048.savepatch  PCSB00049.savepatch  PCSB00050.savepatch  PCSB00115.savepatch  PCSB00118.savepatch  PCSB00176.savepatch  PCSB00177.savepatch  PCSB00182.savepatch  PCSB00226.savepatch  PCSB00230.savepatch  PCSB00231.savepatch  PCSB00244.savepatch  PCSB00264.savepatch  PCSB00370.savepatch  PCSB00374.savepatch  PCSB00396.savepatch  PCSB00405.savepatch  (+122 more)
data/langs/: lang_de.po  lang_de.po~  lang_es.po  lang_es.po~  lang_fr.po  lang_fr.po~  lang_it.po  lang_ja.po  lang_ja.po~  lang_ko.po  lang_pt.po  lang_ru.po  lang_ru.po~  lang_zh.po  lang_zh_cn.po  lang_zh_tw.po
docs/: README.md  translate.po
include/: ciso.h  common.h  kirk_engine.h  menu.h  plugin.h  saves.h  settings.h  sfo.h  svpng.h  utils.h  vitapad.h  vitashell_kernel.h
libs/: kernel.skprx  user.suprx
region converter/: PUT SAVEPATCH TO CONVERT HERE  converter.py  requirements.txt
region converter/converted/: DO NOT DELETE, Conveted savepatch will be here
region converter/db/: EU.xlsx  US.xlsx
region converter/env/Scripts/: activate  activate.bat
sce_sys/livearea/contents/: template.xml
source/: ciso.c  common.c  dialog.c  draw.c  exec_cmd.c  http.c  key_zrif.c  kirk_engine.c  libfont.c  main.c  menu_about.c  menu_cheats.c  menu_hex.c  menu_main.c  menu_options.c  ps1card.c  psp_decrypter.c  saves.c  settings.c  sfo.c  sqlite3.c  ttf_fonts.c  util.c  vitapad.c  vmp_resign.c  zip_util.c
